ratios en tableau ds maxs-by-reps